# algnt

./: CMakeLists.txt  README
bigint/: CMakeLists.txt  big_int.cpp  big_int.h  container.cpp  container.h
numsyst/: numsyst.cpp  numsyst.h
tasks/: CMakeLists.txt
tasks/arithmetics/: CMakeLists.txt  arithmetics.cpp
tasks/egcd/: CMakeLists.txt  egcd.cpp
tasks/factor1/: CMakeLists.txt  factor1.cpp
tasks/fibonacci1/: CMakeLists.txt  fibonacci1.cpp
tasks/numsyst/: CMakeLists.txt  numsyst.cpp  numsyst.py
